--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     />
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-    <link rel="stylesheet" href="category.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <!-- السايدبار -->
@@ -729,6 +729,6 @@
     </main>
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
-    <script src="./category.js"></script>
+    <script src="./main.js"></script>
   </body>
 </html>
