--- a/index.html
+++ b/index.html
@@ -140,13 +140,20 @@
       </div>
       <!-- ................................... -->
 
-<div class="bg-[#1e163b] p-7 sm:p-10 shadow-lg ">
-  <div class="max-w-3xl  flex   gap-3">
-    <i class="fa-solid fa-star text-yellow-500 text-lg sm:text-2xl "></i>
-   <div class="flex flex-col items-center gap-2 ">
+<div class="bg-[#140b33] p-7 sm:p-10 shadow-lg ">
+  <div class="max-w-3xl  flex flex-col  gap-3">
+    <div class="flex items-center gap-2 ">
+     <i class="fa-solid fa-star text-yellow-500 text-lg sm:text-2xl "></i>
     <h2 class="text-xl sm:text-2xl font-bold">عنوان التصنيف</h2>
     <p class="bg-indigo-500 p-2 text-center text-xs rounded-sm">لا تفوتك عروضنا</p>
-   </div>
+  </div>
+  <div class="flex items-center">
+    <a class="text-indigo-500" href="">الرئيسية</a>
+    <span class="mx-3">></span>
+    <h2 class="text-sm sm:text-lg font-bold">عنوان التصنيف</h2>
+
+  </div>
+
   </div>
 </div>
 
